@@ -135,6 +135,7 @@ module Options = Main_args.Make_optcomp_options (struct
   let _unsafe = set fast
   let _v () = print_version_and_library ()
   let _version () = print_version_string ()
+  let _vnum () = print_version_string ()
   let _verbose = set verbose
   let _w s = Warnings.parse_options false s
   let _warn_error s = Warnings.parse_options true s
