@@ -28,6 +28,11 @@ let print_version_string () =
   print_string Sys.ocaml_version ; print_newline();
   exit 0
 
+let print_version_num () =
+  print_endline Sys.ocaml_version;
+  exit 0;
+;;
+
 let specs =
   ["-ml", Arg.Set ml_automata,
     " Output code that does not use the Lexing module built-in automata interpreter";
@@ -36,6 +41,7 @@ let specs =
    "-q", Arg.Set Common.quiet_mode, " Do not display informational messages";
    "-v",  Arg.Unit print_version_string, " Print version and exit";
    "-version",  Arg.Unit print_version_string, " Print version and exit";
+   "-vnum",  Arg.Unit print_version_num, " Print version number and exit";
   ]
 
 let _ =
