@@ -50,6 +50,11 @@ let print_version () =
   exit 0;
 ;;
 
+let print_version_num () =
+  Printf.printf "%s\n" Sys.ocaml_version;
+  exit 0;
+;;
+
 module Options = Main_args.Make_bytetop_options (struct
   let set r () = r := true
   let clear r () = r := false
@@ -69,6 +74,7 @@ module Options = Main_args.Make_bytetop_options (struct
   let _strict_sequence = set strict_sequence
   let _unsafe = set fast
   let _version () = print_version ()
+  let _vnum () = print_version_num ()
   let _w s = Warnings.parse_options false s
   let _warn_error s = Warnings.parse_options true s
   let _warn_help = Warnings.help_warnings
